src/objects/smagicinteract__Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Error_Status_Code__c</fullName>
        <label>Error Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Error_Type__c</fullName>
        <label>Error Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                    <default>true</default>
                    <label>Custom</label>
                </value>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>SOQL</fullName>
                </value>
                <value>
                    <fullName>Permission</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smagicinteract__Fields__c</fullName>
        <label>Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Line_number__c</fullName>
        <label>Line number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Object__c</fullName>
        <label>Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Error Logs</relationshipLabel>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>smagicinteract__All</fullName>
        <columns>smagicinteract__Class_Name__c</columns>
        <columns>smagicinteract__Error_Message__c</columns>
        <columns>smagicinteract__Error_Type__c</columns>
        <columns>smagicinteract__Fields__c</columns>
        <columns>smagicinteract__Line_number__c</columns>
        <columns>smagicinteract__Object__c</columns>
        <columns>smagicinteract__Batch_Id__c</columns>
        <columns>smagicinteract__Error_Status_Code__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Error Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>